fixed image not showing up and positioning issues with the label

--- a/assets/style.css
+++ b/assets/style.css
@@ -158,7 +158,19 @@ section p {
     position: absolute;
     bottom: 10%;
     right: 82%;
+}
 
+.label2 {
+    display: inline-block;
+    text-align: center;
+    color: white;
+    background-color: rgb(36, 36, 36);
+    opacity: 85%;
+    width: 40%;
+    position: absolute;
+    bottom: 10%;
+    right: 60%;
+    height: 55%;
 }
 
 .horiseon {
@@ -178,7 +190,7 @@ section p {
     height: 150px;
     margin: 0 1% 2% 1%;
     border: black 5px solid;
-    background-image: url(/assets/images/little-big-sales.png)
+    background-image: url(./images/little-big-sales.png)
 }
 
 .project3 {
